--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
              <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                  <li><a href="{% url 'cars_list' %}" class="nav-link px-2 text-white">Shop</a></li>
                  <li><a href="{% url 'sell_cars' %}" class="nav-link px-2 text-white">Sell a Car</a></li>
-                 <li><a href="{% url 'image_edit' %}" class="nav-link px-2 text-white">Change Photo</a></li>
+                 <li><a href="{% url 'my_listed_cars' %}" class="nav-link px-2 text-white">My Listings</a></li>
              </ul>
              <div class="text-end">
                  {% if request.user.is_authenticated %}
