--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -14,7 +14,9 @@
                     <div class="card shadow-lg border-0 rounded-lg mt-0 mb-3">
                         <div class="card-header justify-content-center">
                             <div id="error_div"></div>
-                            <h3 class="font-weight-light my-4 text-center">{% trans "Login" %}</h3>
+                            {% element h1 %}
+                                {% trans "Login" %}
+                            {% endelement %}
                         </div>
                         {% if form.errors %}
                             <p>{% trans "Your username and password didn't match. Please try again." %}</p>
