--- a/templates/account/password_reset_done.html
+++ b/templates/account/password_reset_done.html
@@ -20,7 +20,7 @@
                             {% include "account/snippets/already_logged_in.html" %}
                         {% endif %}
                         <p>
-                            {% blocktrans %}We have sent you an email. If you have not received it please check your spam folder. Otherwise contact us if you do not receive it in a few minutes.{% endblocktrans %}
+                            {% blocktrans %}We have sent you an email. If you have not received it please check your spam folder. Otherwise, contact us if you do not receive it in a few minutes.{% endblocktrans %}
                         </p>
                     </div>
                 </div>
