--- a/templates/car_not_found.html
+++ b/templates/car_not_found.html
@@ -6,6 +6,6 @@
 {% block content %}
     <div class="container">
         <h1>Error</h1>
-        <p>Sorry, car not found.</p>
+        <p>Sorry, car was not found.</p>
     </div>
 {% endblock %}
